# MechIK

./: .clang-format  .gitignore  CMakeLists.txt  License.md  README.md  config.ini  credits.txt  world.ini
models/: mech_body.blend  mech_body.blend1  mech_body.mtl  mech_leg_b.mtl
shaders/: ground.fragment.glsl  ground.vertex.glsl  model.fragment.glsl  model.vertex.glsl  sky.fragment.glsl  sky.vertex.glsl
src/: ZD  config.cpp  config.hpp  debug.cpp  debug.hpp  gridmap.cpp  gridmap.hpp  ground.cpp  ground.hpp  main.cpp  mech.cpp  mech.hpp  prop.cpp  prop.hpp  sky.cpp  sky.hpp  world.cpp  world.hpp
textures/: Rock2_LOD_8k_occlusion.tga
